; ModuleID = '/home/carl/AnghaBench/linux/drivers/nfc/pn533/extr_pn533.c_pn533_target_felica_is_valid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nfc/pn533/extr_pn533.c_pn533_target_felica_is_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pn533_target_felica = type { i64 }

@PN533_FELICA_OPC_SENSF_RES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pn533_target_felica*, i32)* @pn533_target_felica_is_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pn533_target_felica_is_valid(%struct.pn533_target_felica* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pn533_target_felica*, align 8
  %5 = alloca i32, align 4
  store %struct.pn533_target_felica* %0, %struct.pn533_target_felica** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = sext i32 %6 to i64
  %8 = icmp ult i64 %7, 8
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

10:                                               ; preds = %2
  %11 = load %struct.pn533_target_felica*, %struct.pn533_target_felica** %4, align 8
  %12 = getelementptr inbounds %struct.pn533_target_felica, %struct.pn533_target_felica* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @PN533_FELICA_OPC_SENSF_RES, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %18

17:                                               ; preds = %10
  store i32 1, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %16, %9
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
